# stm32_dev

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_cm7_asw.sh  build_cm7_fbl.sh  build_m4_asw.sh  build_m4_fbl.sh  howto.md
00_code/: CMakeLists.txt
00_code/01_bsp/: CMakeLists.txt
00_code/01_bsp/cmsis/cmsis-device-f4-master/: CMakeLists.txt
00_code/01_bsp/cmsis/cmsis-device-f4-master/Include/: stm32f4xx.h
00_code/01_bsp/hal/stm32f4xx-hal-driver/: CMakeLists.txt
00_code/30_main/: CMakeLists.txt
11_asw_f4/01_bsp/: CMakeLists.txt
11_asw_f4/01_bsp/hal/stm32f4xx-hal-driver/Src/: stm32f4xx_hal_tim_ex.c
11_asw_f4/30_main/Src/: adc.c  main.c
20_fbl_h7/: CMakeLists.txt
20_fbl_h7/01_bsp/: CMakeLists.txt
20_fbl_h7/01_bsp/hal/stm32h7xx-hal-driver/Inc/Config/: stm32h7xx_hal_conf.h
20_fbl_h7/01_bsp/nucleo_h7/: stm32h7xx_nucleo.c
20_fbl_h7/20_core0_cm7/00_main/: CMakeLists.txt
20_fbl_h7/20_core0_cm7/00_main/Src/: main.c  stm32h7xx_it.c
20_fbl_h7/20_core0_cm7/01_boot/: CMakeLists.txt
20_fbl_h7/20_core0_cm7/01_boot/Inc/: boot_fn.h
20_fbl_h7/20_core0_cm7/01_boot/Src/: boot_fn.c
20_fbl_h7/20_core0_cm7/10_ll_services/: CMakeLists.txt
20_fbl_h7/20_core0_cm7/10_ll_services/svo_svc/Inc/: svo_svc.h
20_fbl_h7/20_core0_cm7/10_ll_services/svo_svc/Src/: svo_svc.c
20_fbl_h7/21_core1_cm4/00_main/: CMakeLists.txt
20_fbl_h7/90_common/: CMakeLists.txt
21_asw_h7/: CMakeLists.txt
21_asw_h7/01_bsp/cmsis/: CMakeLists.txt
21_asw_h7/01_bsp/hal/: CMakeLists.txt
21_asw_h7/50_main/: CMakeLists.txt
31_asw_f7/30_main/: CMakeLists.txt
31_asw_f7/30_main/Inc/: stm32f7xx_it.h
31_asw_f7/30_main/Src/: stm32f7xx_it.c
40_asw_h7/: CMakeLists.txt
40_asw_h7/01_bsp/cmsis/: CMakeLists.txt
40_asw_h7/01_bsp/hal/: CMakeLists.txt
40_asw_h7/20_core0_cm7/00_main/: CMakeLists.txt
40_asw_h7/20_core0_cm7/00_main/Src/: main.c
40_asw_h7/20_core0_cm7/10_ll_services/: CMakeLists.txt
40_asw_h7/20_core0_cm7/10_ll_services/port_disco_svc/Inc/: port_disco_svc.h
40_asw_h7/20_core0_cm7/10_ll_services/port_disco_svc/Src/: port_disco_svc.c
40_asw_h7/20_core0_cm7/10_ll_services/svo_svc/Inc/: svo_svc.h
40_asw_h7/20_core0_cm7/10_ll_services/svo_svc/Src/: svo_svc.c
40_asw_h7/20_core0_cm7/20_fsm/: CMakeLists.txt
40_asw_h7/20_core0_cm7/21_mpu/: CMakeLists.txt
40_asw_h7/21_core1_cm4/00_main/: CMakeLists.txt
40_asw_h7/21_core1_cm4/00_main/Src/: main.c
40_asw_h7/90_common/Src/: system_stm32h7xx_dualcore_boot_cm4_cm7.c
41_asw_f7/: CMakeLists.txt
41_asw_f7/01_bsp/: CMakeLists.txt
41_asw_f7/01_bsp/hal/: CMakeLists.txt
41_asw_f7/30_main/Src/: main.c
42_asw_f4/: CMakeLists.txt
50_fbl_f4/01_bsp/cmsis/: CMakeLists.txt
50_fbl_f4/01_bsp/hal/: CMakeLists.txt
50_fbl_f4/30_main/: CMakeLists.txt
50_fbl_f4/30_main/Src/: gpio.c  stm32f4xx_hal_timebase_tim.c
51_asw_f4/: CMakeLists.txt
51_asw_f4/01_bsp/cmsis/: readme.md
51_asw_f4/01_bsp/cmsis/cmsis-device-f4-master/Include/: stm32f4xx.h
90_config/10_linker/: STM32F413_asw.ld  STM32F413_fbl.ld  stm32h755xx_asw_CM7.ld  stm32h755xx_fbl_CM7.ld  stm32h755xx_flash_CM4.ld
99_build/cmake/: compile-options.cmake
99_build/cmake_recipes/STM32F413/asw/: CMakeLists.txt
99_build/cmake_recipes/STM32F413/fbl/: CMakeLists.txt
99_build/cmake_recipes/STM32H755/asw/: CMakeLists.txt
99_build/cmake_recipes/STM32H755/bash_templates/: build.sh  build_cm7_only.sh
99_build/cmake_recipes/STM32H755/dual_core/: CMakeLists.txt
99_build/cmake_recipes/STM32H755/fbl/: CMakeLists.txt
